# scraping-facile

./: _linear.ipynb  facile.ipynb  main_linear.py  pyproject.toml  segugio.ipynb
