[tool.poetry]
name = "scraping-facile"
version = "0.1.0"
description = ""
authors = ["NicolaVanoli <nicolavanoli96@gmail.com>"]
readme = "README.md"
packages = [{include = "scraping_facile"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
selenium = "^4.15.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
